--- a/token/js/package.json
+++ b/token/js/package.json
@@ -28,7 +28,7 @@
         "postbuild": "echo '{\"type\":\"commonjs\"}' > lib/cjs/package.json && echo '{\"type\":\"module\"}' > lib/esm/package.json",
         "deploy": "yarn docs && gh-pages --dist docs --dest token/js --dotfiles",
         "example": "node --experimental-specifier-resolution=node --loader ts-node/esm examples/create_mint_and_transfer_tokens.ts",
-        "example2": "node --experimental-specifier-resolution=node --loader ts-node/esm examples/TransferBack.ts",
+        "example2": "node --experimental-specifier-resolution=node --loader ts-node/esm examples/Transferback.ts",
         "test": "yarn test:unit && yarn test:e2e-built && yarn test:e2e-native && yarn test:e2e-2022",
         "test:unit": "mocha test/unit",
         "test:e2e-built": "start-server-and-test 'solana-test-validator --bpf-program TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA ../../target/deploy/spl_token.so --reset --quiet' http://localhost:8899/health 'mocha test/e2e'",
